all time functions

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
      <div class="input-group input-group-lg">
         <div class="input-group-prepend row">
-          <span class="input-group-text">nine am</span>
+          <span class="input-group-text">0900</span>
         </div>
          <textarea id="nineAM" class="form-control" aria-label="With textarea"> 
          </textarea>
@@ -49,9 +49,9 @@
       
       <div class="input-group input-group-lg">
         <div class="input-group-prepend row">
-          <span class="input-group-text">10 AM</span>
+          <span class="input-group-text">1000</span>
         </div>
-         <textarea id="10" class="form-control" aria-label="With textarea">
+         <textarea id="tenAM" class="form-control" aria-label="With textarea">
         </textarea>
         <div class="input-group-append">
           <span class="input-group-text"> 
@@ -63,9 +63,9 @@
      
       <div class="input-group input-group-lg">
         <div class="input-group-prepend row">
-          <span class="input-group-text">11 AM</span>
+          <span class="input-group-text">1100</span>
         </div>
-        <textarea id="11" class="form-control" aria-label="With textarea">
+        <textarea id="elevenAM" class="form-control" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
@@ -79,7 +79,7 @@
         <div class="input-group-prepend row">
           <span class="input-group-text">noon</span>
         </div>
-         <textarea id="12" class="form-control" aria-label="With textarea">
+         <textarea id="noon" class="form-control" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
@@ -92,9 +92,9 @@
 
       <div class="input-group input-group-lg">
         <div class="input-group-prepend row">
-          <span class="input-group-text">1 PM</span>
+          <span class="input-group-text">1300</span>
         </div>
-         <textarea id="1" class="form-control" aria-label="With textarea">
+         <textarea id="onePM" class="form-control" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
@@ -106,9 +106,9 @@
 
       <div class="input-group input-group-lg">
         <div class="input-group-prepend row">
-          <span class="input-group-text">2 PM</span>
+          <span class="input-group-text">1400</span>
         </div>
-         <textarea id="2" class="form-control" aria-label="With textarea">
+         <textarea id="twoPM" class="form-control" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
@@ -121,9 +121,9 @@
 
       <div class="input-group input-group-lg">
         <div class="input-group-prepend row">
-          <span class="input-group-text">3 PM</span>
+          <span class="input-group-text">1500</span>
         </div>
-         <textarea id="3" class="form-control" aria-label="With textarea">
+         <textarea id="threePM" class="form-control" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
@@ -137,9 +137,9 @@
 
       <div class="input-group input-group-lg">
         <div class="input-group-prepend row">
-          <span class="input-group-text">4 PM</span>
+          <span class="input-group-text">1600</span>
         </div>
-         <textarea id="4" class="form-control" aria-label="With textarea">
+         <textarea id="fourPM" class="form-control" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
@@ -153,9 +153,9 @@
 
       <div class="input-group input-group-lg">
         <div class="input-group-prepend row">
-          <span class="input-group-text">5 PM</span>
+          <span class="input-group-text">1700</span>
         </div>
-         <textarea id="5" class="form-control" aria-label="With textarea">
+         <textarea id="fivePM" class="form-control" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
