--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="input-group-prepend row">
           <span class="input-group-text">0900</span>
         </div>
-         <textarea id="nineAM" class="form-control" aria-label="With textarea"> 
+         <textarea id="9" class="form-control colorCoded" aria-label="With textarea"> 
          </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
@@ -51,11 +51,11 @@
         <div class="input-group-prepend row">
           <span class="input-group-text">1000</span>
         </div>
-         <textarea id="tenAM" class="form-control" aria-label="With textarea">
+         <textarea id="10" class="form-control colorCoded" aria-label="With textarea">
         </textarea>
         <div class="input-group-append">
           <span class="input-group-text"> 
-          <button id="button10am" class="saveBtn btn btn-secondary" type="button">
+          <button class="saveBtn btn btn-secondary" type="button">
             <i class="fas fa-plus-circle"></i>
           </span>
         </div>
@@ -65,11 +65,11 @@
         <div class="input-group-prepend row">
           <span class="input-group-text">1100</span>
         </div>
-        <textarea id="elevenAM" class="form-control" aria-label="With textarea">
+        <textarea id="11" class="form-control colorCoded" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-          <button id="button11am" class="saveBtn btn btn-secondary" type="button"
+          <button class="saveBtn btn btn-secondary" type="button"
           ><i class="fas fa-plus-circle"></i>
           </span>
         </div>
@@ -79,11 +79,11 @@
         <div class="input-group-prepend row">
           <span class="input-group-text">noon</span>
         </div>
-         <textarea id="noon" class="form-control" aria-label="With textarea">
+         <textarea id="12" class="form-control colorCoded" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-            <button id="btn12pm" class="saveBtn btn btn-secondary" type="button">
+            <button class="saveBtn btn btn-secondary" type="button">
               <i class="fas fa-plus-circle"></i>
             </button>
               </span>
@@ -94,11 +94,11 @@
         <div class="input-group-prepend row">
           <span class="input-group-text">1300</span>
         </div>
-         <textarea id="onePM" class="form-control" aria-label="With textarea">
+         <textarea id="13" class="form-control colorCoded" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-          <button id="button1pm" class="saveBtn btn btn-secondary" type="button"
+          <button class="saveBtn btn btn-secondary" type="button"
           ><i class="fas fa-plus-circle"></i>
           </span>
         </div>
@@ -108,11 +108,11 @@
         <div class="input-group-prepend row">
           <span class="input-group-text">1400</span>
         </div>
-         <textarea id="twoPM" class="form-control" aria-label="With textarea">
+         <textarea id="14" class="form-control colorCoded" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-            <button id="twoPmButton" class="saveBtn btn btn-secondary" type="button">
+            <button class="saveBtn btn btn-secondary" type="button">
               <i class="fas fa-plus-circle"></i>
             </button>
               </span>
@@ -123,11 +123,11 @@
         <div class="input-group-prepend row">
           <span class="input-group-text">1500</span>
         </div>
-         <textarea id="threePM" class="form-control" aria-label="With textarea">
+         <textarea id="15" class="form-control colorCoded" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-            <button id="btn3pm" class="saveBtn btn btn-secondary" type="button">
+            <button class="saveBtn btn btn-secondary" type="button">
               <i class="fas fa-plus-circle"></i>
             </button>
               </span>
@@ -139,11 +139,11 @@
         <div class="input-group-prepend row">
           <span class="input-group-text">1600</span>
         </div>
-         <textarea id="fourPM" class="form-control" aria-label="With textarea">
+         <textarea id="16" class="form-control colorCoded" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-            <button id="btnFourpm" class="saveBtn btn btn-secondary" type="button">
+            <button class="saveBtn btn btn-secondary" type="button">
               <i class="fas fa-plus-circle"></i>
             </button>
               </span>
@@ -155,13 +155,13 @@
         <div class="input-group-prepend row">
           <span class="input-group-text">1700</span>
         </div>
-         <textarea id="fivePM" class="form-control" aria-label="With textarea">
+         <textarea id="17" class="form-control colorCoded" aria-label="With textarea">
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
 
         
-            <button id="btnFivepm" class="btn btn-secondary saveBtn" type="button">
+            <button class="btn btn-secondary saveBtn" type="button">
           <i class="fas fa-plus-circle"></i>
         </button>
           </span>
