fixed colorcoding and added local storage for each block.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-          <button class="saveBtn btn btn-secondary" type="button">
+          <button id=btnNine class="saveBtn btn btn-secondary" type="button">
             <i class="fas fa-plus-circle"></i>
           </span>
         </div>
@@ -55,7 +55,7 @@
         </textarea>
         <div class="input-group-append">
           <span class="input-group-text"> 
-          <button class="saveBtn btn btn-secondary" type="button">
+          <button id="btnTen" class="saveBtn btn btn-secondary" type="button">
             <i class="fas fa-plus-circle"></i>
           </span>
         </div>
@@ -69,7 +69,7 @@
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-          <button class="saveBtn btn btn-secondary" type="button"
+          <button id="btn11" class="saveBtn btn btn-secondary" type="button"
           ><i class="fas fa-plus-circle"></i>
           </span>
         </div>
@@ -83,7 +83,7 @@
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-            <button class="saveBtn btn btn-secondary" type="button">
+            <button id="btn12" class="saveBtn btn btn-secondary" type="button">
               <i class="fas fa-plus-circle"></i>
             </button>
               </span>
@@ -98,7 +98,7 @@
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-          <button class="saveBtn btn btn-secondary" type="button"
+          <button id="btn13" class="saveBtn btn btn-secondary" type="button"
           ><i class="fas fa-plus-circle"></i>
           </span>
         </div>
@@ -112,7 +112,7 @@
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-            <button class="saveBtn btn btn-secondary" type="button">
+            <button id="btn14" class="saveBtn btn btn-secondary" type="button">
               <i class="fas fa-plus-circle"></i>
             </button>
               </span>
@@ -127,7 +127,7 @@
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-            <button class="saveBtn btn btn-secondary" type="button">
+            <button id="btn15" class="saveBtn btn btn-secondary" type="button">
               <i class="fas fa-plus-circle"></i>
             </button>
               </span>
@@ -143,7 +143,7 @@
           </textarea>
           <div class="input-group-append">
           <span class="input-group-text"> 
-            <button class="saveBtn btn btn-secondary" type="button">
+            <button id="btn16" class="saveBtn btn btn-secondary" type="button">
               <i class="fas fa-plus-circle"></i>
             </button>
               </span>
@@ -161,7 +161,7 @@
           <span class="input-group-text"> 
 
         
-            <button class="btn btn-secondary saveBtn" type="button">
+            <button id="btn17" class="btn btn-secondary saveBtn" type="button">
           <i class="fas fa-plus-circle"></i>
         </button>
           </span>
